# praxis-core

./: .gitignore  README.md  pyproject.toml
praxis/: cli.py  note.txt  notes.txt  script.sh
praxis/agents/: agent_core.py  command_executor.py  gui_controller.py  memory.py
praxis/llm/: gpt4_api.py  mistral_local.py
praxis/utils/: config.py  logging.py  shell.py
tests/: test_cli.py
